ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fatboy-slim
  namespace: fatboy-staging
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
spec:
  ingressClassName: alb
  rules:
    - host: ad7949109548f460ab2af52d86067bf9-1032411844.eu-west-2.elb.amazonaws.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: fatboy-slim
                port:
                  number: 5000
